# raylib-next-gamejam

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/: explosion.rfx  pickup.rfx
src/: CMakeLists.txt  defs.hpp  game.cpp  game.hpp  main.cpp  raylib_game.cpp  util.cpp  util.hpp
